<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.construa.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_projectos"
        android:name="com.example.construa.ui.projectos.ProjectosFragment"
        android:label="@string/title_projectos"
        tools:layout="@layout/fragment_projectos" />

    <fragment
        android:id="@+id/navigation_actividades"
        android:name="com.example.construa.ui.actividades.ActividadesFragment"
        android:label="@string/title_actividades"
        tools:layout="@layout/fragment_actividades" />

    <fragment
        android:id="@+id/navigation_material"
        android:name="com.example.construa.ui.material.MaterialFragment"
        android:label="@string/title_material"
        tools:layout="@layout/fragment_material" />
</navigation>